--- a/index.html
+++ b/index.html
@@ -37,11 +37,45 @@
             </div>
         </div>
     </nav>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="container jumbotron" role="listbox">
+        <div class="item active">
+            <img src="img/cats.jpg" alt="Cat">
+        </div>
+
+        <div class="item">
+            <img src="img/cats1.jpg" alt="Chania">
+        </div>
+
+        <div class="item">
+            <img src="img/cats2.jpg" alt="Flower">
+        </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
 
     <main class="container-fluid">
         <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                <img class="img-responsive" src=< /div>
+                <img class="img-responsive" src=""> </div>
             </div>
     </main>
     <script src='//code.jquery.com/jquery-2.1.1.min.js'></script>
