--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-    <title> </title>
+    <meta charset="UTF-8">
+    <title>Bootstrap Sample</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/index.css" type="text/css" />    
 </head>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<meta charset="UTP-8">
 
 <body>
+
     <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
+        <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"></span>
@@ -26,9 +26,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Section 1</a></li>
-                    <li><a href="#">Section 2</a></li>
-                    <li><a href="#bottom" class="smooth">Bottom</a></li>
+                    <li><a href="#footer" class="smooth">Bottom</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
@@ -37,52 +35,137 @@
             </div>
         </div>
     </nav>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
 
-    <!-- Wrapper for slides -->
-    <div class="container jumbotron" role="listbox">
-        <div class="item active">
-            <img src="img/cats.jpg" alt="Cat">
-        </div>
+    <div class="container jumbotron">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
 
-        <div class="item">
-            <img src="img/cats1.jpg" alt="Chania">
-        </div>
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img src="img/plane3.jpg" alt="Cat">
+                </div>
 
-        <div class="item">
-            <img src="img/cats2.jpg" alt="Flower">
+                <div class="item">
+                    <img src="img/plane.jpg" alt="Cat">
+                </div>
+
+                <div class="item">
+                    <img src="img/plane1.jpg" alt="Cat">
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
 
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-
-    <main class="container-fluid">
+    <main class="container">
         <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                <img class="img-responsive" src=""> </div>
+                <img class="img-responsive" src="img/plane.jpg" alt="Happy cat">
             </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane1.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane2.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane3.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane4.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/happy-cat.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/planenew.jpg" alt="Happy cat">
+            </div>
+           
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane2.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane3.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane4.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/happy-cat.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/planenew.jpg" alt="Happy cat">
+            </div>
+                        <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane1.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane2.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane3.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane4.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/happy-cat.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/planenew.jpg" alt="Happy cat">
+            </div>
+                        <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane1.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane2.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane3.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/plane4.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/happy-cat.jpg" alt="Happy cat">
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <img class="img-responsive" src="img/planenew.jpg" alt="Happy cat">
+            </div>
+           
+        </div>
     </main>
-    <script src='//code.jquery.com/jquery-2.1.1.min.js'></script>
 
+    <footer class="container" id="footer">
+        Copyright (c) Happy Cats
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+    <script type="text/javascript" src="js/smooth-scroll.js"></script>
+    <script type="text/javascript" src="js/collapse-navbar.js"></script>
 </body>
 
 </html>
